# Task-Tools

./: .gitignore  LICENSE  README.md  daily_notes.py  pyproject.toml  task_csv_to_ics.py
resources/: daily_notes.py  task_csv_to_ics.py  test.todo
resources/test/: test.todo
scripts/: _directory.py  build_docs.py  build_exe.py  set_directory.py  setup_venv.py  update_version.py
task_tools/: __main__.py  daily_notes.py  task_csv_to_ics.py
task_tools/definitions/: __init__.py  _args.py  _general.py  _todo.py
task_tools/lib_file_handling/: __init__.py  _file_handler.py
task_tools/lib_todo/: __init__.py  _daily.py  _local.py
