[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tools"
version = "1.0.0"
authors = [
  { name="Arjan Lemmens", email="arjanmail@tutamail.com" },
]
description = "Tools to make technical GUIs with tkinter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]
